<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConfigActivity" >

    <TextView
        android:id="@+id/tvCATitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/app_title"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textColor="#ff99cc00"
        android:textStyle="normal"
        android:typeface="monospace" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/cbCAllowGeolocByShop"
                android:text="@string/subst_shop_name_descr"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView2"
                android:layout_marginBottom="16dp"
                android:text="@string/subst_shop_name_warn"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffcc0000" />

            <CheckBox
                android:id="@+id/cbCAllowGeolocByShop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/textView3"
                android:text="@string/subst_shop_name" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/cbCAllowGeoloc"
                android:layout_marginBottom="16dp"
                android:text="@string/allow_geoloc_descr"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <CheckBox
                android:id="@+id/cbCSaveShopName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/textView1"
                android:layout_marginBottom="16dp"
                android:checked="false"
                android:text="@string/save_shop_name" />

            <CheckBox
                android:id="@+id/cbCAllowGeoloc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView5"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/allow_geoloc" />

            <CheckBox
                android:id="@+id/cbCPortraitOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/cbCSaveShopName"
                android:text="@string/portrait_only" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/cbCPortraitOnly"
                android:layout_marginBottom="16dp"
                android:text="@string/portrait_only_descr"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <CheckBox
                android:id="@+id/cbCSmartSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:text="@string/smart_search" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/cbCSmartSearch"
                android:layout_marginBottom="16dp"
                android:text="@string/smart_search_descr"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/btnCImportExport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/textView4"
                android:text="@string/import_export" />

        </RelativeLayout>
    </ScrollView>

</LinearLayout>