<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/tvDetectorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/app_title"
        android:textColor="#ff99cc00"
        android:textSize="20dp"
        android:textStyle="normal"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/tvDetectorHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvDetectorTitle"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/detector"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/tvDetectorHeader" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDETRace"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <CheckBox
                        android:id="@+id/cbDETUnicorn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:checked="true"
                        android:text="@string/unicorn" />

                    <CheckBox
                        android:id="@+id/cbDETPegasus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:checked="true"
                        android:text="@string/pegasus" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <CheckBox
                        android:id="@+id/cbDETEarthen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/earthen" />

                    <CheckBox
                        android:id="@+id/cbDETAlicorn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/alicorn" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <CheckBox
                        android:id="@+id/cbDETNonpony"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/nonpony" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/tvDETRace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/race"
                android:textAppearance="?android:attr/textAppearance" />

            <TextView
                android:id="@+id/tvDETColors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tableLayout1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/colors"
                android:textAppearance="?android:attr/textAppearance" />

            <TableLayout
                android:id="@+id/tableLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDETColors"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" >

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <CheckBox
                        android:id="@+id/cbDETMane"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:text="@string/mane" />

                    <Button
                        android:id="@+id/btnDETManeColor"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:background="#ffffffff"
                        android:gravity="center_vertical|center_horizontal"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/choose_color"
                        android:textAppearance="?android:attr/textAppearance"
                        android:textColor="#ff000000"
                        android:textColorHint="#ff000000" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <CheckBox
                        android:id="@+id/cbDETBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:text="@string/body" />

                    <Button
                        android:id="@+id/btnDETBodyColor"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:background="#ffffffff"
                        android:gravity="center_vertical|center_horizontal"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/choose_color"
                        android:textAppearance="?android:attr/textAppearance"
                        android:textColor="#ff000000"
                        android:textColorHint="#ff000000" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/btnDETQuery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tableLayout2"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/query" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>